@@ -108,6 +108,7 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - macbuild.sh: define PulseAudio libraries and binaries to be later
       copied. Discover them using MACPORTS_PREFIX. Error out if any component
       was not found.
+    - macbuild.sh: copy PulseAudio libraries and binaries.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
